Fixes mistake that hides event details popup visibility caused by trying to soften the blow for mobile users in the calendar view

--- a/_sass/_events-calendar.scss
+++ b/_sass/_events-calendar.scss
@@ -397,7 +397,6 @@ $calendar-month-default-week-count: 5;
                         aspect-ratio: 180 / 185;
                         padding-left: 5px;
                         padding-right: 5px;
-                        overflow: auto;
                         > .events--calendar--body--week--day--number {
                             width: 100%;
                             box-sizing: border-box;
